# pfkb

./: .gitignore  DEVELOPMENT_PLAN.md  PROJECT_START.md  README.en.md  README.md  pyproject.toml
configs/: excludes.default.yaml  llm.example.yaml  privacy.example.yaml  roots.example.yaml  tags.example.yaml
docs/: agent-lifecycle.md  agent-skill.md  asset-sidecars.md  cli-reference.md  configuration.md  mvp0-usage.md  mvp1-extraction.md  mvp2-analysis.md  mvp2-review-llm.md  mvp3-html-browser.md  privacy-setup.md  project-status.md  roots-setup.md  tags-taxonomy.md
docs/reviews/: architecture-review-2026-05-28.md  code-review-2026-05-28.md  review-summary-2026-05-28.md
skills/anyfile-wiki/: SKILL.md
src/anyfile_wiki/: __init__.py  agent.py  agent_review.py  analyze.py  assets.py  cleanup.py  cli.py  decisions.py  extract_worker.py  html.py  inventory.py  llm_client.py  llm_config.py  parse.py  policy.py  report.py  review.py  review_server.py  review_ui.py  roots.py  run_state.py  semantic.py  tags.py
src/pfkb/: __init__.py  analyze.py  cli.py  html.py  inventory.py  llm_client.py  parse.py  policy.py  report.py  review.py  roots.py  (+2 more)
tests/: test_agent_mvp4.py  test_analyze.py  test_assets.py  test_cleanup_plan.py  test_extract.py  test_extract_inventory_records.py  test_extract_rerun.py  test_extract_rerun_strategy.py  test_extractions_inventory.py  test_html.py  test_inventory_report_parse.py  test_llm_client.py  test_mvp0_inventory_features.py  test_mvp1_extract_pipeline.py  test_policy.py  test_review.py  test_run_state.py  test_scan.py  test_tags.py
