[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anyfile-wiki"
version = "0.1.0"
description = "Turn local files into a privacy-first wiki for humans and AI agents."
readme = "PROJECT_START.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
parse = [
  "markitdown>=0.1.0",
]

[project.scripts]
anyfile-wiki = "anyfile_wiki.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
